[package]
name = "rust-cdp"
version = "0.1.0"
edition = "2021"
authors = ["servufi"]
description = """Chrome DevTools Protocol starter in Rust for browser automation."""

[dependencies]
anyhow = "1.0.86"
async-trait = "0.1.74"
base64 = "0.22.1"
dotenv = "0.15.0"
futures = "0.3.30"
futures-util = "0.3.30"
itertools = "0.13.0"
log = "0.4.21"
env_logger = "0.11.3"
once_cell = "1.19.0"
rand = "0.8.5"
reqwest = { version = "0.12.5", features = ["json"] }
serde = { version = "1.0.203", features = ["derive"] }
serde_json = "1.0.118"
tokio = { version = "1.38.0", features = ["full"] }
tokio-tungstenite = "0.23.1"
url = "2.5.2"
